--- a/myresume.html
+++ b/myresume.html
@@ -4,31 +4,28 @@
 <style>
     .card{
         border: 4px solid rgb(17, 0, 255);
-        width:300;
-        height:550;
+        width:400px;
+        height:550px;
         margin:20px;
         background-color:crimson;
         text-align: center;
         padding:20px;
-        flex:1;
-    }
-    body{
-        display:flex;
-    }
+        font-style:oblique;
+        color:blue;
     }
 </style>
 </head>
 <body>
+    <center>
     <div class="card">
-        <img src="https://cache.careers360.mobi/media/presets/720X480/colleges/social-media/media-gallery/3678/2020/11/3/Campus%20View%20of%20Narasaraopeta%20Engineering%20College%20Narasaraopet_Campus-View.jpg"width="1000"height="250" >
-        <h1>Name:Renuka</h1>
+        <img src="https://cache.careers360.mobi/media/presets/720X480/colleges/social-media/media-gallery/3678/2020/11/3/Campus%20View%20of%20Narasaraopeta%20Engineering%20College%20Narasaraopet_Campus-View.jpg"width="300"height="250" >
+        <h1>Name:Renu Reddy</h1>
         <h2>Branch:CSE</h2>
         <h2>Year:2nd</h2>
         <h2>Topic:FEWT</h2>
         <h2>College:NEC</h2>
-        <button>click here</button>
+        <button>submit</button>
     </div>
-    <br>
-    
+    </center>  
 </body>
 </html>
